# locus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  SPECIFICATION.md  pyproject.toml  server.json  smithery.yaml
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: README.md  claude-security-audit.md  codex-security-audit.md  copilot-security-audit.md  gemini-security-audit.md
.github/workflows/: ci.yml  claude-security-audit.yml  copilot-setup-steps.yml  docker.yml  post-ai-security-pr-comment.yml  publish.yml  wiki-update-gate.yml
docs/: ai-security-actions-prompts.md  architecture.md  benchmarks.md  onboarding.md  security.md
docs/audits/: 2026-03-03-initial-repo-audit.md  2026-03-03-pr-review-report.md  2026-03-03-security-pr-review-report.md
docs/audits/artifacts/: 2026-03-03-bandit.json  2026-03-03-pip-audit.txt
docs/bench/: v0.7.1.json  v0.8.0.json  v0.9.0-base.json  v0.9.0-security.json
docs/handoffs/: nano-nimbus-migration.md
example-palace/: INDEX.md
example-palace/global/toolchain/: toolchain.md
example-palace/projects/my-project/: my-project.md  technical-gotchas.md
locus/: __init__.py  utils.py
locus/agent/: __init__.py  config.py  main.py  metrics.py
locus/audit/: main.py  model.py  report.py  scanner.py
locus/feedback/: signals.py
locus/mcp/: main.py  palace.py  server.py
locus/security/: __init__.py  config.py  keys.py  middleware.py  nonce.py  signing.py  taint.py
scripts/: bench-compare.py  bench-mcp.py  generate-charts.py  install-skills.sh  try-mcp.py
skills/claude/locus/: SKILL.md
skills/claude/locus-audit/: SKILL.md
skills/claude/locus-consolidate/: SKILL.md
skills/claude/locus-feedback/: SKILL.md
skills/claude/locus-palace-init/: SKILL.md
skills/claude/locus-release/: SKILL.md
skills/claude/locus-security/: SKILL.md
skills/codex/locus/: SKILL.md
skills/codex/locus-consolidate/: SKILL.md
skills/codex/locus-feedback/: SKILL.md
skills/gemini/locus/: SKILL.md
skills/gemini/locus-consolidate/: SKILL.md
skills/gemini/locus-palace-init/: SKILL.md
spec/: audit-algorithm.md  health-report-format.md  index-format.md  inferred-feedback.md  mcp-server.md  metrics-schema.md  reference-analysis.md  room-conventions.md  size-limits.md  write-modes.md
templates/: INDEX.md  locus-security.yaml
templates/room/: room-name.md
templates/room/sessions/: YYYY-MM-DD.md
tests/: run-benchmark.md
tests/fixtures/: README.md
tests/fixtures/flat/: MEMORY.md
tests/fixtures/flat-palace/: INDEX.md
tests/fixtures/palace/: INDEX.md
tests/fixtures/palace/projects/homelab-iac/: homelab-iac.md  platform-services.md  technical-gotchas.md
tests/fixtures/palace/projects/homelab-iac/sessions/: 2026-02-25.md
tests/results/: 2026-03-02.md
tests/unit/: test_audit.py  test_cli_version.py  test_install_skills.py  test_mcp.py  test_metrics.py  test_signals.py
tests/unit/security/: test_config.py  test_keys.py  test_nonce.py  test_review_fixes.py  test_signing.py  test_taint.py
