[project]
name = "locus-agent"
version = "0.2.0"
description = "Hierarchical markdown memory system for autonomous AI agents"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.0.14",
    "anyio>=4.0",
]

[project.scripts]
locus = "locus.agent.main:cli"
locus-audit = "locus.audit.main:cli"
locus-mcp = "locus.mcp.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["locus"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "matplotlib>=3.8"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"
